Show dashes for game.

--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,4 +1,5 @@
-inicio
-<form method='post' >
-inicio <input type='submit' name='inicio' value='inicio' />
+<form method='post' action='/iniciar' >
+inicio <input type='submit' value='inicio' />
 </form>
+<br/>
+Palabra: <%= @@juego.mostrar_guiones %>
