--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,5 +1,5 @@
-<form method='post' action='/iniciar' >
-inicio <input type='submit' value='inicio' />
+<form method='get' action='/juego' >
+inicio <input type='submit' value='inicio' name='inicio' />
 </form>
 <br/>
 Palabra: <%= @@juego.mostrar_guiones %>
