Cargar palabra en pantalla de inicio.

--- a/views/juego.erb
+++ b/views/juego.erb
@@ -1,7 +1,7 @@
 <form method='get' action='/juego' >
 <h1 name='Oportunidades'>Oportunidades: <%= @@juego.oportunidades %></h1>
 <br />
-pista<input type="submit" name="pista" value="pista">
+pista<input type="button" name="pista" value="pista">
 <br />
 espacios: <h1><%= @@juego.mostrar_guiones %></h1>
 <br />
