--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,5 +1,4 @@
 <form method='get' action='/juego' >
-inicio <input type='submit' value='inicio' name='inicio' />
+<input type='submit' value='inicio' name='Iniciar Juego' />
 </form>
 <br/>
-Palabra: <%= @@juego.mostrar_guiones %>
