--- a/views/juego.erb
+++ b/views/juego.erb
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" href="/css/master.css">
+</head>
 <form method='post' action='/pista'>
   <input type="submit" name="pista" value="pista">
 </form>
@@ -12,12 +15,13 @@
     <th>
       <h1><%= @@juego.mostrar_guiones %></h1>
       <br />
+    ///
       <% if (@mostrar_pista) %>
         Pista: <%= @@juego.mostrar_pista %>
       <% end %>
       <br />
       Ingresar letra:
-      <input type="text" name="nletra" value="a">
+      <input type="text" name="nletra" value="">
       <input type="submit" name="Letra" value="Letra">
       <br />
       Letras Usadas: <%= @@juego.letras_usadas %>
