Cambiar texto para iniciar juego directamente.

--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,4 +1,3 @@
 <form method='get' action='/juego' >
-<input type='submit' value='Iniciar Juego' name='inicio' />
+<input type='submit' value='Iniciar Juego Con Palabra Oculta' name='inicio' />
 </form>
-<br/>
