--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,3 +1,4 @@
 <form method='get' action='/juego' >
+Nombre Jugador: <input type='text' name='nombre' required='required'>
 <input type='submit' value='Iniciar Juego Con Palabra Oculta' name='inicio' />
 </form>
