--- a/views/juego.erb
+++ b/views/juego.erb
@@ -2,7 +2,7 @@
 <form method='post' action='/pista'>
   <input type="submit" name="pista" value="pista">
 </form>
-<form method='get' action='/juego' >
+
 <h1>
 Bienvenido <%= @@nombre_jugador %>
 </h1>
@@ -21,15 +21,27 @@ Bienvenido <%= @@nombre_jugador %>
         Pista: <%= @@juego.mostrar_pista %>
       <% end %>
       <br />
+      <form method='get' action='/juego' >
       Ingresar letra:
       <input type="text" name="nletra" value="">
       <input type="submit" name="Letra" value="Letra">
       <br />
+      </form>
       Letras Usadas: <%= @@juego.letras_usadas %>
       <br />
       <%= @@juego.mensaje %>
     </th>
   </tr>
+  <tr>  
+    <th>
+    <form method='post' action='/nuevojuego' >       
+          <% if (@@juego.mensaje=="Ganaste") %> 
+            <input type="submit" name="jugardenuevo" value="jugar de nuevo">
+          <% end %>      
+     </form>
+    </th>
+  </tr>  
 </table>
 
-</form>
+
+
