--- a/views/inicio.erb
+++ b/views/inicio.erb
@@ -1,3 +1,7 @@
 <form method='get' action='/juego' >
 <input type='submit' value='Iniciar Juego Con Palabra Oculta' name='inicio' />
 </form>
+<br />
+<form method='get' action='/nuevapalabra' >
+  <input type='submit' value='Nueva palabra' name='btnnuevapalabra' />
+</form>
